# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.3.0] - 2022-01-29
### Added
- Project have names now
- New Asset: Web Application
- New Asset: Web Request
- New Asset: Host
- REST-API v1 (alpha)
- Import of vulnerability templates with descriptions and recommendations
- Import of checklists (alpha)
- Tasks on an asset level

### Changed
- Move pentest related objects into *assets*
- Split proofs into ImageProof and TextProof
- Minor UI changes
- Pentests will have a single draft report version instead of multiple
- Updated default report template

### Fixed
- ordering of vulnerabilities by severity in report
- fix legacy tests for Github CI

### Security
- nothing

### Deprecated
- nothing

### Removed
- ProofOfConcept model
