@@ -99,6 +99,10 @@
                                 {% endif %}
                             </div>
                         </div>
+                    {% empty %}
+                        <div class="">
+                            <p>No proofs yet!</p>
+                        </div>
                     {% endfor %}
                 </div>
             </div>
