@@ -1,0 +1,17 @@
+# Generated by Django 3.2.12 on 2022-03-01 13:25
+
+from django.db import migrations
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('projects', '0003_delete_scope'),
+    ]
+
+    operations = [
+        migrations.RemoveField(
+            model_name='project',
+            name='report_default_title',
+        ),
+    ]
