@@ -5,7 +5,7 @@ server {
     listen 443 ssl;
 
     root /config/www;
-    index index.html index.htm index.php;
+    index index.html;
 
     server_name _;
 
